--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "serverstart": "DEBUG=arete-backend:* npm run devstart"
   },
   "dependencies": {
+    "async": "^3.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-validator": "^6.4.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.8.11",
