--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.8.11",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
