--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "jade": "~1.11.0",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "nodemailer": "^6.4.5"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "nodemon": "^2.0.2"
   }
 }
