--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "express-validator": "^6.4.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
     "multer": "^1.3.1",
-    "nodemailer": "^6.4.5"
+    "nodemailer": "^6.4.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
